cmake_minimum_required(VERSION 3.24)
#project(node_gles)
#set(CMAKE_CXX_STANDARD 17)
#include_directories(/home/google/.tnvm/versions/node/v16.19.0/include/node)
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/deps)
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/binding)
#add_library(
#        ${PROJECT_NAME} SHARED
#        binding/binding.cc
#        binding/egl_context_wrapper.cc
#        binding/webgl_extensions.cc
#        binding/webgl_rendering_context.cc
#        binding/webgl_sync.cc
#        )
#add_executable(node_gles binding/binding.cc)

#include(${CMAKE_CURRENT_SOURCE_DIR}/build/Debug/CMakeLists.txt)
